syntax = "proto3";

package torchserve;

service TorchServe {
  rpc LoadModel(LoadModelRequest) returns (ModelStatus);
  rpc UnloadModel(UnloadModelRequest) returns (ModelStatus);
  rpc GetModelStatus(GetModelStatusRequest) returns (ModelStatus);
  rpc Predict(PredictRequest) returns (PredictResponse);
}

message LoadModelRequest {
  string model_name = 1;
  string model_path = 2;
}

message UnloadModelRequest {
  string model_name = 1;
}

message GetModelStatusRequest {
  string model_name = 1;
}

message ModelStatus {
  string model_name = 1;
  string status = 2;
}

message PredictRequest {
  string model_name = 1;
  bytes input_data = 2;
}

message PredictResponse {
  bytes output_data = 1;
}