from concurrent import futures
import torchserve_pb2
import torchserve_pb2_grpc
import grpc

class TorchServe(torchserve_pb2_grpc.TorchServeServicer):
    def LoadModel(self, request, context):
        # Implement model loading logic
        return torchserve_pb2.ModelStatus(model_name=request.model_name, status="Loaded")

    def UnloadModel(self, request, context):
        # Implement model unloading logic
        return torchserve_pb2.ModelStatus(model_name=request.model_name, status="Unloaded")

    def GetModelStatus(self, request, context):
        # Implement logic to get model status
        return torchserve_pb2.ModelStatus(model_name=request.model_name, status="Available")

    def Predict(self, request, context):
        # Implement prediction logic
        return torchserve_pb2.PredictResponse(output_data=b"Prediction Output")

def serve():
    server = grpc.server(futures.ThreadPoolExecutor(max_workers=10))
    torchserve_pb2_grpc.add_TorchServeServicer_to_server(TorchServe(), server)
    server.add_insecure_port('[::]:50051')
    server.start()
    server.wait_for_termination()

if __name__ == '__main__':
    serve()